Includes two different ways to show course list

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -10,5 +10,5 @@
 </head>
 <body>
     <header>
-        <h1> <a href="/">Inicio</a>   <a href="/coordinador">Coordinador</a>   <a href="/cursos">Estudiante</a></h1>
+        <h1> <a href="/">Inicio</a>   <a href="/crear">Crear Curso</a>   <a href="/cursos">Estudiante</a></h1>
     </header>
