--- a/views/showCourseList.hbs
+++ b/views/showCourseList.hbs
@@ -8,10 +8,12 @@
             <th scope="col">Nombre</th>
             <th scope="col">Descripción</th>
             <th scope="col">Valor</th>
+            <th scope="col">Modalidad</th>
+            <th scope="col">Estado</th>
         </tr>
     </thead>
     <tbody>
-        {{{listar}}}
+        {{{showCourseList}}}
     </tbody>
 </table>
 
