--- a/views/collapsedcourselist.hbs
+++ b/views/collapsedcourselist.hbs
@@ -1,6 +1,5 @@
 {{>header}}
 <h1>Cursos disponibles</h1>
-
 <table class="table table-hover">
     <thead class="thead-dark">
         <tr>
@@ -11,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        {{{listar}}}
+        {{{showCourseList}}}
     </tbody>
 </table>
 
