--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,9 +1,10 @@
+<br><br><br>
 <footer class="navbar fixed-bottom navbar-dark bg-dark">
     <span class="navbar-text">
         Elaborado por Juan Carlos Molina. <a href="mailto:ing.jcmolina@gmail.com">ing.jcmolina@gmail.com</a>
     </span>
 </footer>
-
+</div>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
