--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -29,7 +29,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/crear">Crear curso</a>
-                            <a class="dropdown-item" href="#">Administrar cursos</a>
+                            <a class="dropdown-item" href="/administrar">Administrar cursos</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -44,5 +44,5 @@
             </div>
         </nav>
     </header>
-
-    <body>
+    <br><br><br>
+    <div class="container overflow-auto">
