--- a/views/createCourse.hbs
+++ b/views/createCourse.hbs
@@ -1,48 +1,50 @@
 {{>header}}
 
-<h1>Administración de cursos</h1>
-
-
 <div class="container-fluid">
-    ...
+    <h1>Administración de cursos</h1>
+
+    <form action="/createCourse" method="POST">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="courseid">ID del curso</label>
+                <input class="form-control" id="courseid" name="courseid" type="text"
+                    placeholder="Ingrese el ID del curso" required>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="coursemode">Modalidad del curso</label>
+                <select class="form-control" name="coursemode">
+                    <option value='presencial'>Presencial</option>
+                    <option value='virtual'>Virtual</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="coursename">Nombre del curso</label>
+            <input class="form-control" id="coursename" name="coursename" type="text"
+                placeholder="Ingrese el nombre del curso" required>
+        </div>
+        <div class="form-group">
+            <label for="coursedescription">Descripción del curso</label>
+            <input class="form-control" id="coursedescription" name="coursedescription" type="text"
+                placeholder="Ingrese la descripción del curso" required>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="coursevalue">Valor del curso</label>
+                <input class="form-control" id="coursevalue" name="coursevalue" type="number"
+                    placeholder="Ingrese el valor del curso" required>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="coursehours">Duración del curso</label>
+                <input class="form-control" id="coursehours" name="coursehours" type="number"
+                    placeholder="Intensidad horaria">
+            </div>
+        </div>
+        <input type="hidden" name="cousestate" value="Disponible">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+    </form>
 </div>
-<form action="/createCourse" method="POST">
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="courseid">ID del curso</label>
-            <input class="form-control" id="courseid" name="courseid" type="text" placeholder="Ingrese el ID del curso" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label for="coursemode">Modalidad del curso</label>
-            <select class="form-control" name="coursemode">
-                <option value='presencial'>Presencial</option>
-                <option value='virtual'>Virtual</option>
-            </select>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="coursename">Nombre del curso</label>
-        <input class="form-control" id="coursename" name="coursename" type="text" placeholder="Ingrese el nombre del curso" required>
-    </div>
-    <div class="form-group">
-        <label for="coursedescription">Descripción del curso</label>
-        <input class="form-control" id="coursedescription" name="coursedescription"
-            type="text" placeholder="Ingrese la descripción del curso" required>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="coursevalue">Valor del curso</label>
-            <input class="form-control" id="coursevalue" name="coursevalue" 
-            type="number" placeholder="Ingrese el valor del curso" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label for="coursehours">Duración del curso</label>
-            <input class="form-control" id="coursehours" name="coursehours" type="number" placeholder="Intensidad horaria">
-        </div>
-    </div>
-    <input type="hidden" name="cousestate" value="disponible">
-    <button type="submit" class="btn btn-primary">Guardar</button>
-</form>
+
 
 
 {{>footer}}
