Last commit. All features tested and working properly.

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -30,6 +30,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/crear">Crear curso</a>
                             <a class="dropdown-item" href="/administrar">Administrar cursos</a>
+                            <a class="dropdown-item" href="/inscripciones">Administrar inscripciones</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -38,7 +39,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="cursos">Listar cursos</a>
-                            <a class="dropdown-item" href="/cursos">Matricular curso</a>
+                            <a class="dropdown-item" href="/matricular">Matricular curso</a>
                     </li>
                 </ul>
             </div>
