--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,19 @@
 {{>header}}
 
-    <h1>
-        Bienvenido a la página de inicio
-    </h1>
+<p>
+    <img src="http://www.tdea.edu.co/images/tdea/galeria/valla-virtual/2019/banner_becas_sapiencia_27_abril_2019.jpg" alt="Tecnológico de Antioquia">
+</p>
 
-    <p>
-        
-    </p>
+<div>
+    <span class="display-4">
+        Bienvenido a la página de inicio
+    </span>
+</div>
+<br>
+<div>
+    <span class="display-5">
+        Esta aplicación permite la administración de cursos e inscripción de estudiantes a los mismos.
+    </span>
+</div>
 
 {{>footer}}
