Create course bug fixed

--- a/views/inscription.hbs
+++ b/views/inscription.hbs
@@ -7,7 +7,7 @@
 
 
 <div>
-    <form action="/inscription" method="POST">
+    <form action="/resultpage" method="POST">
         <div class="form-row">
             <div class="col">
                 <div class="form-group">
