--- a/views/manageInscriptions.hbs
+++ b/views/manageInscriptions.hbs
@@ -1,4 +1,8 @@
 {{>header}}
-<h1>Inscripciones</h1>
-{{{showCollapseInscriptions}}}
+<div>
+    <span class="display-4">
+        Administración de Inscripciones
+    </span>
+</div>
+{{{showCollapsedInscriptions}}}
 {{>footer}}
